# hdfc-analytics

./: .gitignore  README.md  pyproject.toml
configs/: categories.toml  column_mapping.toml  statement.csv
hdfc_analytics/: cli.py  plot.py  statement.py
